# bohelper

./: .dumpdata.py  .gitignore  .wrapper.py  README.md  TODO.md  Taskfile.dist.yml  bohelper.py  bohelper.spec  data.json  persist.json  pyproject.toml  utils.py
bohelper/: __main__.py  persist.py  utils.py
data/: mems.json  tomes.json
