[tool.poetry]
name = "bohelper"
version = "0.1.0"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
rich = "^13.8.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
